[gd_scene load_steps=8 format=3 uid="uid://jqulcx85qn4y"]

[ext_resource type="Script" path="res://Game Over.gd" id="1_k1dmf"]
[ext_resource type="AudioStream" uid="uid://yun3dw4dju1y" path="res://Sounds/8-bit Game Over.wav" id="2_cv3ky"]
[ext_resource type="Texture2D" uid="uid://bnx5v0l5w3kq5" path="res://Background/Space Background.png" id="2_ilwux"]
[ext_resource type="Texture2D" uid="uid://cou577hsu7v75" path="res://Background/xetuna-planet.png" id="3_bljam"]
[ext_resource type="Texture2D" uid="uid://dqvd8ut6f1c6h" path="res://Graphics/Boss.png" id="4_iabwe"]
[ext_resource type="Texture2D" uid="uid://d0k5sy3sb8n" path="res://Effects/Pixel explosion/pixelExplosion02.png" id="5_7fph2"]
[ext_resource type="Texture2D" uid="uid://uipk1g80jm13" path="res://Graphics/Enemies.png" id="6_1ob55"]

[node name="Game Over" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1152.0
offset_bottom = -648.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k1dmf")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(599, 339)
scale = Vector2(1.325, 1.39259)
texture = ExtResource("2_ilwux")

[node name="Planet" type="Sprite2D" parent="Background"]
position = Vector2(361.509, 150.798)
scale = Vector2(0.416569, 0.371316)
texture = ExtResource("3_bljam")

[node name="Boss" type="Sprite2D" parent="Background"]
position = Vector2(335.849, -69.6544)
rotation = 1.57252
scale = Vector2(0.718087, 0.754717)
skew = -0.000163078
texture = ExtResource("4_iabwe")

[node name="PixelExplosion02" type="Sprite2D" parent="Background"]
position = Vector2(-225.66, 32.3139)
scale = Vector2(1.53302, 1.37699)
texture = ExtResource("5_7fph2")

[node name="Enemies2" type="Sprite2D" parent="Background"]
position = Vector2(166.792, 163.006)
rotation = 1.58676
scale = Vector2(0.353875, 0.470827)
skew = -0.00151205
texture = ExtResource("6_1ob55")

[node name="Enemies3" type="Sprite2D" parent="Background"]
position = Vector2(-347.924, -13.6436)
rotation = 1.58803
scale = Vector2(0.343843, 0.432135)
skew = 0.00640464
texture = ExtResource("6_1ob55")

[node name="Enemies5" type="Sprite2D" parent="Background"]
position = Vector2(-357.736, 157.261)
rotation = -4.67507
scale = Vector2(0.307148, 0.378961)
skew = -0.0150489
texture = ExtResource("6_1ob55")

[node name="Enemies4" type="Sprite2D" parent="Background"]
position = Vector2(-276.981, -158.697)
rotation = 1.58582
scale = Vector2(0.291864, 0.399569)
skew = -0.00824881
texture = ExtResource("6_1ob55")

[node name="Enemies" type="Sprite2D" parent="Background"]
position = Vector2(-30.1888, -191.011)
rotation = 1.55017
scale = Vector2(0.327003, 0.455333)
skew = 0.014403
texture = ExtResource("6_1ob55")

[node name="PanelContainer" type="PanelContainer" parent="."]
self_modulate = Color(1, 1, 1, 0.529412)
layout_mode = 0
offset_left = 389.0
offset_top = 166.0
offset_right = 805.0
offset_bottom = 340.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Game Over
You Loose, You Died!"
horizontal_alignment = 1

[node name="Reset" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Retry Game"
icon_alignment = 1
vertical_icon_alignment = 2

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quit Game"
vertical_icon_alignment = 2

[node name="Stopwatch" type="Label" parent="." groups=["Game"]]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 442.0
offset_top = 387.0
offset_right = 600.0
offset_bottom = 412.0
grow_vertical = 0
scale = Vector2(2, 2)
text = "Best Time: 00:00:000"
vertical_alignment = 1

[node name="HighScore" type="Label" parent="."]
layout_mode = 0
offset_left = 427.0
offset_top = 462.0
offset_right = 607.0
offset_bottom = 485.0
scale = Vector2(2, 2)
text = "High Score:"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_cv3ky")
autoplay = true

[connection signal="pressed" from="PanelContainer/VBoxContainer/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
